--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1, maximum-scale=1" />
-	<title>Portfolio Jakob Wolitzki</title>
+	<title>Portfolio Ashish Thakur</title>
 	<script src="bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
 	<link rel="stylesheet" href="bower_components/foundation-sites/dist/css/foundation.min.css">
 	<link rel="stylesheet" href="">
@@ -24,12 +24,7 @@
 </head>
 
 <body>
-	<!-- Watch how to use it on YouTube -->
-	<!-- https://youtu.be/ddLuZXs8Uyw -->
-
-
-	<!-- Watch how to deploy it live -->
-	<!-- https://youtu.be/E1dqffpUlMA -->
+	
 	<div class="wrapper">
 		
 
@@ -121,7 +116,7 @@
 
 			<div class="row work-row"> <!-- odd -->
 				<div class="small-12 medium-6 medium-push-6 columns">
-					<img src="assets/images/project1.png" alt="">
+					<img src="assets/images/projectchat.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-pull-7 columns">
 					<div class="details details-ftm">
@@ -129,14 +124,14 @@
 						<p class="platform">Web</p>
 						<p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
 						<p>It's a chat app with socket </p>
-						<a class="my-button" target="_blank" href="http://google.com">Visit Website</a>
+						<a class="my-button" target="_blank" href="https://go-text.herokuapp.com/">Visit Website</a>
 					</div>
 				</div>
 			</div>
 
 			<div class="row work-row"> <!-- even -->
 				<div class="small-12 medium-6 columns">
-					<img src="assets/images/project2.png" alt="">
+					<img src="assets/images/project1.jpg" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-offset-1 columns">
 					<div class="details details-ftm">
@@ -144,7 +139,7 @@
 						<p class="platform">Web, android</p>
 						<p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
 						<p>It's a 2D platformer game </p>
-						<a class="my-button" target="_blank" href="http://google.com">Visit Website</a>
+						<a class="my-button" target="_blank" href="https://ashdev.itch.io/farland">Visit Website</a>
 					</div>
 				</div>
 			</div>
