--- a/index.html
+++ b/index.html
@@ -69,13 +69,12 @@
 					<i class="fi-laptop"></i>
 					<h3>Front-end</h3>
 					<ul>
+						<li>React</li>
 						<li>html(5)</li>
 						<li>css(3)</li>
 						<li>Javascript</li>
 						<li>Jquery</li>
 						<li>Bootstrap</li>
-						<li>Semantics-UI</li>
-						<li>Api | Ajax</li>
 					</ul>
 				</div>
 				<div class="small-12 medium-4 columns text-center experience-topics">
@@ -87,20 +86,14 @@
 						<li>Express</li>
 						<li>SQL</li>
 						<li>Mongo</li>
-						<li>Restful Web Services</li>
-						<li>Flask | Python</li>
 					</ul>
 				</div>
 				<div class="small-12 medium-4 columns text-center experience-topics">
 					<i class="fi-star"></i>
 					<h3>Tools</h3>
 					<ul>
-						<li>Vim</li>
-						<li>Bower</li>
-						<li>Atom || Webstorm</li>
-						<li>Github && Bitbucket</li>
-						<li>SSH</li>
-						<li>Gulp</li>
+						<li>Atom || VS Code<li>
+						<li>Github</li>
 					</ul>
 				</div>
 			</div>
@@ -168,7 +161,7 @@
 
 
 		</section>
-
+<!-- 
 		<section id="teaching">
 			<h2 class="text-center">Teaching</h2>
 			<div class="row">
@@ -182,7 +175,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 		<section id="footer-cta">
 			<h2 class="text-center">Wanna work with me?</h2>
